--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -51,8 +51,9 @@ body{
 	color:orange;
 }
 #content p{
-	color:#3300FF;
+	color:#FFF;
 	font-size:30px;
+	font-family: tahoma;
 }
 #link1{
 	width:292px;
@@ -61,3 +62,59 @@ body{
 	margin-bottom:50px;
 	margin-left:16px;
 }
+#link2{
+	width:292px;
+	height:235px;
+	margin-top:-50px;
+	margin-bottom:50px;
+	margin-left:16px;
+}
+
+#spinlogo{
+    float: left;
+    margin: 0 auto;
+    position: absolute;
+    background-image:url(../images/klogo.png);
+    top: 54%;
+    left: 50%;
+    width: 100px;
+    height: 100px;
+    margin-top: -60px;
+    margin-left: -60px;
+
+}
+
+
+#spinlogo:hover{
+    float: left;
+    margin: 0 auto;
+    position: absolute;
+    background-image:url(../images/klogo.png);
+    top: 54%;
+    left: 50%;
+    width: 100px;
+    height: 100px;
+    margin-top: -60px;
+    margin-left: -60px;
+    -webkit-animation-name: spin;
+    -webkit-animation-duration: 4000ms;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+    -moz-animation-name: spin;
+    -moz-animation-duration: 4000ms;
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-timing-function: linear;
+    -ms-animation-name: spin;
+    -ms-animation-duration: 4000ms;
+    -ms-animation-iteration-count: infinite;
+    -ms-animation-timing-function: linear;
+    animation-name: spin;
+    animation-duration: 4000ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+@-ms-keyframes spin { from { -ms-transform: rotate(0deg); } to { -ms-transform: rotate(360deg); }}
+@-moz-keyframes spin { from { -moz-transform: rotate(0deg); } to { -moz-transform: rotate(360deg); }}
+@-webkit-keyframes spin { from { -webkit-transform: rotate(0deg); } to { -webkit-transform: rotate(360deg); }}
+@keyframes spin { from { transform:rotate(0deg); } to { transform:rotate(360deg); }}
+    }
