--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -7,11 +7,22 @@ body{
 	height:98px;
 	background-image:url(../images/kheader.png);
 	margin:0 auto;
-	font-color:lightblue;
 	text-align:center;
 	line-height:100px;
 	border: 5px solid orange;
 	border-radius:100px;
+}
+nav{
+	position:absolute;
+	color:blue;
+	font-size:20px;
+	height:30px;
+	width:850px;
+	padding:0px;
+	top:20px;
+	left:0px;
+	right:0px;
+	margin:auto;
 }
 #pic1{
 	width:200px;
@@ -60,16 +71,22 @@ body{
 	height:235px;
 	margin-top:-50px;
 	margin-bottom:50px;
-	margin-left:16px;
+	margin-left:60px;
 }
 #link2{
 	width:292px;
 	height:235px;
 	margin-top:-50px;
 	margin-bottom:50px;
-	margin-left:16px;
+	margin-left:60px;
 }
-
+#link3{
+	width:292px;
+	height:235px;
+	margin-top:-110px;
+	margin-bottom:50px;
+	margin-left:550px;
+}
 #spinlogo{
     float: left;
     margin: 0 auto;
@@ -81,10 +98,13 @@ body{
     height: 100px;
     margin-top: -60px;
     margin-left: -60px;
-
 }
-
-
+#Ant{
+	width:292px;
+	height:235px;
+	margin-left:625px;
+	margin-top:-710px;
+}
 #spinlogo:hover{
     float: left;
     margin: 0 auto;
@@ -118,3 +138,12 @@ body{
 @-webkit-keyframes spin { from { -webkit-transform: rotate(0deg); } to { -webkit-transform: rotate(360deg); }}
 @keyframes spin { from { transform:rotate(0deg); } to { transform:rotate(360deg); }}
     }
+/*#navbar1{
+	background-color:transparent;
+	color:blue;
+	font-family:tahoma;
+	font-size:20px;
+	position:relative;
+	left:0px;
+	top:0px;
+}*/
