--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -7,13 +7,14 @@ body{
 	height:98px;
 	background-image:url(../images/kheader.png);
 	margin:0 auto;
-	text-align:center;
 	line-height:100px;
 	border: 5px solid orange;
 	border-radius:100px;
+	position:fixed;
+	left:0px;
+	right:0px;
 }
-nav{
-	position:absolute;
+#nav{
 	color:blue;
 	font-size:20px;
 	height:30px;
@@ -23,6 +24,18 @@ nav{
 	left:0px;
 	right:0px;
 	margin:auto;
+	position:fixed;
+}
+#nav a{
+	color:blue;
+	text-decoration:none;
+}
+#nav a:hover{
+	color:white;
+}
+#content1{
+	position:relative;
+	top:125px;
 }
 #pic1{
 	width:200px;
@@ -92,35 +105,65 @@ nav{
 	height:235px;
 	margin-top:-30px;
 }
+#Ant{
+	width:292px;
+	height:235px;
+	margin-left:625px;
+	margin-top:-710px;
+}
+#Early{
+	text-align:center;
+	margin-top:-37px;
+}
+#contentmelo{
+	background-color:rgba(83, 83, 83, .8);
+	width:900px;
+	height:3000px;
+	margin-top:100px;
+	border-color:transparent;
+	border-radius: 60px;
+	margin: 0 auto;
+	font-size:25px;
+	color:orange;
+}
+#melopic{
+	width:292px;
+	height:200px;
+	border:.1px solid transparent;
+	border-radius:40px;
+	margin-left:288px;
+}
+#Carmelo{
+	color:white;
+	font-size:20px;
+	margin-left:100px;
+	margin-right:100px;
+}
+#ct{
+	color:lightblue;
+	font-size:22px;
+	margin-left:40px;
+	margin-right:40px;
+}
 #spinlogo{
-    float: left;
+	float:left;
     margin: 0 auto;
     position: absolute;
+    z-index:99;
     background-image:url(../images/klogo.png);
-    top: 54%;
+    top: 55%;
     left: 50%;
     width: 100px;
     height: 100px;
     margin-top: -60px;
     margin-left: -60px;
 }
-#Ant{
-	width:292px;
-	height:235px;
-	margin-left:625px;
-	margin-top:-710px;
-	text
-}
-#Early{
-	text-align:center;
-	margin-top:-37px;
-}
 #spinlogo:hover{
     float: left;
     margin: 0 auto;
     position: absolute;
     background-image:url(../images/klogo.png);
-    top: 54%;
+    top: 55%;
     left: 50%;
     width: 100px;
     height: 100px;
